--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,5 @@
 $red: #ff343d;
+$light-blue: #eff2f6;
 $black: #1c1c1c;
 $gray: #92a1a5;
 $dark-gray: #232323;
@@ -16,53 +17,17 @@ $aqua: #318f76;
 }
 
 /*----------------------------------------------------------*/
-
 @keyframes circle-pulse {
 
-  10% {
-    top: calc(3vw - 2px);
-    max-width: calc(13vw + 4px);
-    max-height: calc(27vw + 4px);
-  }
-  20% {
-    top: calc(3vw - 6px);
-    max-width: calc(13vw + 12px);
-    max-height: calc(27vw + 12px);
-  }
-  30% {
-    top: calc(3vw - 9px);
-    max-width: calc(13vw + 18px);
-    max-height: calc(27vw + 18px);
-  }
-  40% {
-    top: calc(3vw - 13px);
-    max-width: calc(13vw + 25px);
-    max-height: calc(27vw + 25px);
+  0% {
+    top: 3vw;
+    max-width: 13vw;
+    max-height: 27vw;
   }
   50% {
     top: calc(3vw - 16px);
     max-width: calc(13vw + 30px);
     max-height: calc(27vw + 30px);
-  }
-  60% {
-    top: calc(3vw - 13px);
-    max-width: calc(13vw + 25px);
-    max-height: calc(27vw + 25px);
-  }
-  70% {
-    top: calc(3vw - 9px);
-    max-width: calc(13vw + 18px);
-    max-height: calc(27vw + 18px);
-  }
-  80% {
-    top: calc(3vw - 6px);
-    max-width: calc(13vw + 12px);
-    max-height: calc(27vw + 12px);
-  }
-  90% {
-    top: calc(3vw - 2px);
-    max-width: calc(13vw + 4px);
-    max-height: calc(27vw + 4px);
   }
   100% {
     top: 3vw;
@@ -71,70 +36,45 @@ $aqua: #318f76;
   }
 }
 
-
-
-/*
 @keyframes circle-pulse-for-md {
 
   0% {
-    top: 9vw;
-    max-width: 40vw;
-    max-height: 80vw;
-  }
-  10% {
-    top: 8vw;
-    max-width: 38vw;
-    max-height: 76vw;
-  }
-  20% {
-    top: 7vw;
-    max-width: 37vw;
-    max-height: 72vw;
-  }
-  30% {
-    top: 6vw;
-    max-width: 40vw;
-    max-height: 80vw;
-  }
-  40% {
-    top: 5vw;
-    max-width: 40vw;
-    max-height: 80vw;
+    top: 8vh;
+    width: calc(250px - 1px);
+    height: calc(500px - 1px);
   }
   50% {
-    top: 4vw;
-    max-width: 40vw;
-    max-height: 80vw;
-  }
-  60% {
-    top: 5vw;
-    max-width: 40vw;
-    max-height: 80vw;
-  }
-  70% {
-    top: 6vw;
-    max-width: 40vw;
-    max-height: 80vw;
-  }
-  80% {
-    top: 7vw;
-    max-width: 40vw;
-    max-height: 80vw;
-  }
-  90% {
-    top: 8vw;
-    max-width: 40vw;
-    max-height: 80vw;
+    top: calc(8vh + 25px);
+    width: calc(250px - 25px);
+    height: calc(500px - 50px);
   }
   100% {
-    top: 9vw;
-    max-width: 40vw;
-    max-height: 80vw;
+    top: 8vh;
+    width: calc(250px - 1px);
+    height: calc(500px - 1px);
   }
-}*/
+}
+
+@keyframes circle-pulse-for-sm {
+
+  0% {
+    top: 30px;
+    width: calc(150px - 1px);
+    height: calc(300px - 1px);
+  }
+  50% {
+    top: 55px;
+    width: calc(150px - 25px);
+    height: calc(300px - 50px);
+  }
+  100% {
+    top: 30px;
+    width: calc(150px - 1px);
+    height: calc(300px - 1px);
+  }
+}
 
 /*----------------------------------------------------------*/
-
 @keyframes jump-visibl {
 
   15% {
@@ -155,9 +95,7 @@ $aqua: #318f76;
   100% { margin-bottom: 60px; }
 }
 
-
 /*----------------------------------------------------------*/
-
 @keyframes use {
 
   25% {
