--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,7 +4,7 @@
   margin-bottom: 50px;
 
   &-wrap {
-    background-color: #eff2f6;
+    background-color: $light-blue;
     position: relative;
     height: 100vh;
     z-index: 2;
@@ -20,27 +20,6 @@
       z-index: -2;
     }
 */
-
-  }
-
-  .logo {
-    position: relative;
-    font-size: 24px;
-    margin: 0;
-    width: 70px;
-
-    &:before {
-      content: "";
-      display: block;
-      width: 11px;
-      height: 11px;
-      border: 3px solid $red;
-      border-radius: 50%;
-      position: absolute;
-      top: 2px;
-      right: -13px;
-      z-index: 7;
-    }
   }
 
   .phone {
@@ -58,8 +37,51 @@
   .buy {
     font-size: 16px;
     font-weight: 700;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid ;
     /*opacity: 0.3;*/                /*Можно ли задать Опасити только для бордера?!!!*/
+  }
+}
+
+.logo {
+  position: relative;
+  font-size: 24px;
+  margin: 0;
+  width: 70px;
+
+  &:before {
+    content: "";
+    background-color: #fff;
+    display: block;
+    width: 11px;
+    height: 11px;
+    border: 3px solid $red;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    right: -13px;
+    z-index: 7;
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    width: 11px;
+    height: 11px;
+    border: 3px solid $red;
+    background-color: $light-blue;
+    top: 2px;
+    right: -13px;
+    z-index: -1;
+  }
+
+  &:hover:after {
+    transition: 1s;
+    opacity: 0;
+    width: 35px;
+    height: 35px;
+    top: -10px;
+    right: -25px;
   }
 }
 
@@ -72,7 +94,6 @@
   left: 62%;
   z-index: -2;
   text-align: center;
-
 
   .text-mars {
     width: 100vh;
@@ -115,13 +136,12 @@
   display: block;
 
   .dron {
-
     max-width: 100%;
     max-height: 100%;
     margin: 0 auto;
 
     &:before {
-      content: "";
+      content: ""; /*????????????????*/
     }
   }
 }
@@ -158,4 +178,3 @@
 @media (max-width: 500px) {
 
 }
-
