--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,18 +8,6 @@
     position: relative;
     height: 100vh;
     z-index: 2;
-
-    /*&:after {
-      content: "";
-      width: 38%;
-      height: 100vh;
-      background-color: $red;
-      position: absolute;
-      top: 0;
-      left: 10px;
-      z-index: -2;
-    }
-*/
   }
 
   .phone {
@@ -108,7 +96,6 @@
     font-size: 17vw;
     text-transform: uppercase;
     color: $red;
-
     text-shadow: 0 0 55px rgba(0, 1, 1, 0.15);
     transform: rotate(90deg);
   }
@@ -131,7 +118,6 @@
   }
 }
 
-
 .block-contain {
   display: block;
 
@@ -139,25 +125,55 @@
     max-width: 100%;
     max-height: 100%;
     margin: 0 auto;
-
-    &:before {
-      content: ""; /*????????????????*/
-    }
   }
 }
 
 
+/*----Menu styles----*/
+.menu-bar {
+  transition: .5s;
+  width: 250px;
+  height: 100vh;
+  background-color: #616868;
+  position: fixed;
+  top: 0;
+  right: -250px;
 
+  ul li {
+    width: 170px;
+    list-style: none;
+    margin-top: 25px;
+    border-bottom: 1px solid #3b3c3d;
+    text-align: center;
 
-@media (min-width: 1200px) {
-
+    a {
+      font-weight: 400;
+      transition: .5s;
+      color: #eff2f6;
+      
+      &:hover {
+        color: $red;
+      }
+    }
+  }
 }
+
+.toggl-menu {
+  right: 0;
+}
+
+.place-menu {
+  width: calc(100% - 250px);
+}
+
+
+
+
 
 @media (max-width: 1199px) {
   .header {
     padding-top: 50px;
   }
-
 }
 
 @media (max-width: 991px) {
@@ -173,6 +189,14 @@
 
 @media (max-width: 768px) {
 
+  .block-contain {
+    display: none;
+  }
+
+  .place-menu {
+    width: 100%;
+    left: -250px;
+  }
 }
 
 @media (max-width: 500px) {
