--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -7,6 +7,11 @@
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;       /*Не применяется ко всей странице!!!!!!!!!!!!!*/
+  width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  transition: .5s;
 }
 
 h1 {
