--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -166,13 +166,56 @@
   width: calc(100% - 250px);
 }
 
+/* ----Slider---- */
+.slider {
+  padding: 0;
+  margin: auto 0;
 
+  .swiper-container {
+    width: 100%;
+    height: 200px;
+  }
+  .swiper-pagination-bullets {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin: 10px 0;
+    z-index: 15;
 
+    .swiper-pagination-bullet {
+      margin: 10px 0;
+      width: 7px;
+      height: 7px;
+
+      &-active {
+        background-color: $red;
+      }
+    }
+  }
+
+ .swiper-slide {
+  width:  calc(100% - 65px);
+  padding-left: 65px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+    h2 {
+      padding: 0;
+    }
+  }
+}
 
 
 @media (max-width: 1199px) {
+
   .header {
     padding-top: 50px;
+  }
+
+  .slider .swiper-slide {
+    width: calc(100% - 50px);
+    padding-left: 50px;
   }
 }
 
